--- a/day-35/src/App.css
+++ b/day-35/src/App.css
@@ -1,7 +1,7 @@
 .App {
-  /* text-align: center; */
-  max-width: 800px;
-  margin: 0 auto;
+  display: flex;
+  gap: 50px;
+  margin: 50px 50px;
 }
 
 .App-logo {
@@ -16,19 +16,14 @@
 }
 
 .App-header {
-  background-color: #fff;
-  /* min-height: 100vh; */
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: black;
-}
-
-.App-header hr {
-  color: black;
-  width: 800px;
+  color: white;
 }
 
 .App-link {
@@ -44,27 +39,7 @@
   }
 }
 
-.img {
-  width: 290px;
-  height: 200px;
-  border-radius: 10px;
-}
-
-.blue {
-  color: #386aff;
-}
-
-.avatar {
-  width: 50px;
+.profile img {
+  width: 200px;
   object-fit: contain;
-  border-radius: 50%;
-}
-
-.sub {
-  display: flex;
-  gap: 20px;
-}
-
-.sub p {
-  align-self: center;
 }
